Se cambio lo largo del juego, detecta cuando pierdes al tocar el blocke con el dinosaurio

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" onclick="saltar()">
+<html lang="es" onclick ="saltar()">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,9 +12,6 @@
         <div id="dino"></div>
         <div id="bloque"></div>
     </div>
-
-
-
     <script src="/script.js"></script>
 </body>
 </html>
