--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="es" onclick ="saltar()">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Ponkosaurio</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <div id="juego">
-        <div id="dino"></div>
-        <div id="bloque"></div>
+    <div class="contenedor">
+       <div class="suelo"></div> 
+       <div class="dino dino-corriendo"></div>
+       <div class="score"></div>
     </div>
-    <script src="/script.js"></script>
 </body>
 </html>
