--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
        <div class="dino dino-corriendo"></div>
        <div class="score"></div>
     </div>
+    <script src="/script.js"></script>
 </body>
 </html>
